# hackcomp

./: Cargo.toml  Makefile  README.md
.github/workflows/: build-lib.yml  rust.yml
src/: error.rs  fs.rs  handler.rs  hooks.rs  jni.rs  lib.rs  main.rs  procfs.rs  seccomp.rs
