[package]
name = "hackcomp"
version = "0.1.0"
edition = "2024"


[dependencies]
log = "0.4.28"
ndk-sys = "0.6.0"
seccompiler = { git = "https://github.com/lihe07/seccompiler.git" }
syscalls = "0.6.18"
thiserror = "2.0.16"
pretty_env_logger = { version = "0.5.0", optional = true }
libc = { version = "0.2.175", optional = true }
nc = "0.9.6"
hashbrown = { version = "0.16.0", features = ["core"] }
spin = "0.10.0"
jni = "0.21"
android_logger = "0.14"

[features]
binary = ["pretty_env_logger", "libc"]

[lib]
name = "hackcomp"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "hackcomp"
path = "src/main.rs"
required-features = ["binary"]
